src/test/custom/invalid/struct/structNull.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {b b}
  struct b is {int i}
  a a = new a {null};
  a.b = new b {1};
  println a.b.i
end